--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <!-- Title -->
+    <string name="app_name">Call CC</string>
+
+    <!-- main -->
+    <string name="onboarding_start">"소리를 📢\n     글자로 듣다 👁"</string>
+    <string name="onboarding_btn">시작하기</string>
+
+    <!-- register1 -->
+    <string name="register1_title">시작할 방법을\n선택해 주세요!</string>
+    <string name="register1_anony">익명으로 하기</string>
+    <string name="register1_true">회원가입 하기</string>
+
+    <!-- register2 -->
+    <string name="backArrow">뒤로가기 버튼</string>
+    <string name="inputProfile">프로필 입력</string>
+    <string name="settingImage">이미지 변경</string>
+    <string name="settingName">이름</string>
+    <string name="settingMessage">소개 메세지</string>
 </resources>
